--- a/style.css
+++ b/style.css
@@ -12,16 +12,6 @@ body {
     font-size: 16px;
     line-height: 1;
     font-family: 'Oswald', sans-serif;
-    
-  }
-  
-  textarea {
-    background: transparent;
-    border: none;
-    resize: none;
-    color: #000000;
-    border-left: 1px solid black;
-    padding: 10px;
   }
   
   .jumbotron {
@@ -32,43 +22,7 @@ body {
     border-bottom: 10px solid black;
     background-color: rgb(255,253,208, 0.2); 
   }
-  
-  .description {
-    white-space: pre-wrap;
-  }
-  
-  .time-block {
-    text-align: center;
-    border-radius: 15px;
-  }
-  
-  .row {
-    white-space: pre-wrap;
-    height: 80px;
-    border-top: 1px solid white;
-  }
-  
-  .hour {
-    background-color: #ffffff;
-    color: #000000;
-    border-top: 1px dashed #000000;
-  }
-  
-  .past {
-    background-color: #d3d3d3;
-    color: white;
-  }
-  
-  .present {
-    background-color: #ff6961;
-    color: white;
-  }
-  
-  .future {
-    background-color: #77dd77;
-    color: white;
-  }
-  
+
   .saveBtn {
     border-left: 1px solid black;
     border-top-right-radius: 15px;
@@ -77,8 +31,7 @@ body {
     color: white;
   }
   
-  .saveBtn:hover {
-    font-size: 20px;
-    transition: all 0.3s ease-in-out;
+  .saveBtn i {
+      font-size: x-large;
   }
   
