--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
 .input-group-lg>.form-control {
     padding: 1.5rem 1rem;
+    max-width: 100%;
+
 }
 
 .input-group-text {
     padding: 2.375rem 2.75rem;
     font-size: 1rem;
+    max-width: 2.375rem;
+    background-color: whitesmoke;
+}
+
+.form-control {
+  resize: none;
 }
 
 body {
@@ -20,7 +28,7 @@ body {
     color: black;
     border-radius: 0;
     border-bottom: 10px solid black;
-    background-color: rgb(255,253,208, 0.2); 
+    background-color: whitesmoke; 
   }
 
   .saveBtn {
@@ -28,7 +36,7 @@ body {
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     background-color: #06aed5;
-    color: white;
+    color: whitesmoke;
   }
   
   .saveBtn i {
