--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 .input-group-lg>.form-control {
     padding: 1.5rem 1rem;
     max-width: 100%;
+}
 
+.texting {
+  color: black !important;
+  font-weight: bolder;
 }
 
 .input-group-text {
@@ -13,6 +17,8 @@
 
 .form-control {
   resize: none;
+  font-weight: bolder;
+    color: black !important;
 }
 
 body {
@@ -29,13 +35,14 @@ body {
     border-radius: 0;
     border-bottom: 10px solid black;
     background-color: whitesmoke; 
+    font-size: xx-large;
   }
 
   .saveBtn {
     border-left: 1px solid black;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    background-color: #06aed5;
+    background-color: #048dab;
     color: whitesmoke;
   }
   
